--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
                             <a href="#services" class="nav-link">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#blog" class="nav-link" target="_blank"
-                                >Blog</a
-                            >
+                            <a href="#blog" class="nav-link">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a href="#contact" class="nav-link">Contact</a>
@@ -89,8 +87,9 @@
         <footer>
             <div class="container">
                 <p>
-                    &copy; <span class="current-year"></span> DevZiaus. All
-                    rights reserved.
+                    &copy; <span class="current-year"></span>
+                    <a href="#" target="_blank">DevZiaus</a>. All rights
+                    reserved.
                 </p>
             </div>
         </footer>
