--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                     <ul class="nav-menu">
                         <li class="nav-item">
-                            <a href="#main" class="nav-link">Home</a>
+                            <a href="#main" class="nav-link active">Home</a>
                         </li>
                         <li class="nav-item">
                             <a href="#about" class="nav-link">About</a>
